--- a/Controller/src/main/resources/templates/fragment/__content_card.html
+++ b/Controller/src/main/resources/templates/fragment/__content_card.html
@@ -50,7 +50,7 @@
             </sup>
         </div>
         <div style="background-color: transparent">
-            <a class="read-more-link-color" th:href="@{/detail/}+${content.getId()}" >Read More</a>
+            <a class="read-more-link-color" th:href="@{/detail/}+${content.getId()}" th:text="#{read-more}" >Read More</a>
         </div>
     </div>
       
