--- a/Controller/src/main/resources/templates/client-home.html
+++ b/Controller/src/main/resources/templates/client-home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     xmlns="http://www.w3.org/1999/xhtml" layout:decorator="~{home-layout}">
 
 <head>
@@ -244,7 +244,7 @@
                     
                     <div class="col-3 d-none d-lg-block bg-white border-left border-right"  >
                         <div class="my-3">
-                            <h4 style="color : #393939">Categories</h4>
+                            <h4 th:text="#{categories}" style="color : #393939">Categories</h4>
                             <hr>
                             <div class="text-left category-list scroll_div" style="max-height: 35vh; overflow:scroll; overflow-x: hidden;">
                                 <p th:each=" category : ${CATEGORIES}"><a style="text-decoration: none !important" th:href="'/category?category_id='+${category.id}"  th:text="${category.name}" >Technology</a></p>
@@ -253,7 +253,7 @@
                         </div>
 
                         <div class="py-3">
-                            <h4 style="color : #393939">Popular post</h4>
+                            <h4 th:text="#{popular-post}"  style="color : #393939">Popular post</h4>
                             <hr>
                             <div class="scroll_div" style="max-height: 45vh; overflow: scroll;overflow-x: hidden;">
                                 <div class="d-flex  align-items-center article_object_list" th:each="article : ${POPULAR_POST}" th:object="${article}" th:onclick="'onClickRedirectTo('+*{id}+')'">
