--- a/Controller/src/main/resources/templates/footer/__footer.html
+++ b/Controller/src/main/resources/templates/footer/__footer.html
@@ -1,4 +1,5 @@
-<footer class="mainfooter p-3" style="background-color: #eeeef2;" role="contentinfo">
+<footer class="mainfooter p-3" style="background-color: #eeeef2;" role="contentinfo" lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        xmlns="http://www.w3.org/1999/xhtml">
     <style>
     .point{
         cursor: pointer;
@@ -9,10 +10,10 @@
             <div class="row mt-4">
                
                 <div class="col-4 col-md-3 pt-3">
-                    <h6 class="point cursor-point" onclick="location.href = '/about'">About us</h6>
+                    <h6 class="point cursor-point" onclick="location.href = '/about'" th:text="#{about-us}">About us</h6>
                     </div>
-                <div class="col-4 col-md-3 pt-3 "  onclick="location.href = '/privacy'"><span class="point"><h6>Privacy</h6></span> </div>
-                <div class="col-4 col-md-3 pt-3 pr-0 pl" onclick="location.href = '/privacy'"><span class="point"><h6 >Users Guide</h6></span>  </div>
+                <div class="col-4 col-md-3 pt-3 "  onclick="location.href = '/privacy'"><span class="point"><h6 th:text="#{privacy-footer}">Privacy</h6></span> </div>
+                <div class="col-4 col-md-3 pt-3 pr-0 pl" onclick="location.href = '/privacy'"><span class="point"><h6 th:text="#{users-guide}" >Users Guide</h6></span>  </div>
                 <div class="col-12 col-md-3 mt-md-1 mt-3 d-flex justify-content-around
                 " style="text-align: center;">
                     <img style="width: 36px;opacity: 0.2;" class="point" src="/icon/facebook.svg" alt="">
