--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -1,4 +1,4 @@
-<style>
+<style >
 
         #notification_div_body::-webkit-scrollbar-track
         {
@@ -169,7 +169,8 @@
     
 </style>
 <link rel="stylesheet" href="../css/maTooltip.css">
-<nav class="navbar navbar-expand-lg bg-white border-bottom" >
+<nav class="navbar navbar-expand-lg bg-white border-bottom"  lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+     xmlns="http://www.w3.org/1999/xhtml">
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTopRightSide" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon ">
             <i class="material-icons-new outline-toc">
@@ -186,7 +187,7 @@
     <div class="mx-auto  text-center w-75 d-none d-lg-block">
       
         <div class="mx-auto w-50 search-bar-parent-div d-flex">
-            <input type="text" id="srch" class="form-control-one-line search-bar"   placeholder="Search"  >
+            <input type="text" id="srch" class="form-control-one-line search-bar"   th:placeholder="#{search}" >
             <button class="border-0 bg-transparent d-flex" id="srchBody">  
                 <i class="material-icons-new outline-search" style="color: #0000008 !important; " ></i>
                 
@@ -205,13 +206,13 @@
             <li class="nav-item  d-none d-lg-block">
 
                 <a class="nav-link text-center text-dark" href="/homepage">
-                    <h5 th:class="${CURRENT_PAGE == 'home'}?'icon-linear-color page-active':'icon-linear-color'" style="width: 75%;" th:text="#{article.author}">Home</h5>
+                    <h5 th:class="${CURRENT_PAGE == 'home'}?'icon-linear-color page-active':'icon-linear-color'" style="width: 75%;"  th:text="#{home}">Home</h5>
 
                 </a>
             </li>
             <li class="nav-item  d-none d-lg-block">
                 <a class="nav-link text-center text-dark" href="/category">
-                    <h5 th:class="${CURRENT_PAGE == 'category'}?'icon-linear-color page-active':'icon-linear-color'"  >Category</h5>
+                    <h5 th:class="${CURRENT_PAGE == 'category'}?'icon-linear-color page-active':'icon-linear-color'" th:text="#{nav-category}" >Category</h5>
                 </a>
             </li>
             <li class="nav-item  "  sec:authorize="isAuthenticated()">
@@ -233,7 +234,7 @@
                     <ul class="dropdown-menu notifications dropdown-menu-customized " role="menu" aria-labelledby="dLabel" id=" style-scroll">
 
                         <div class="notification-heading  border-bottom">
-                            <b class="notification-menu-title">Notifications</b>
+                            <b class="notification-menu-title" th:text="#{notification}">Notifications</b>
 <!--                            <h4 class="notification-menu-title pull-right">View all<i class="glyphicon glyphicon-circle-arrow-right"></i></h4>-->
                         </div>
                         <li class="divider"></li>
@@ -307,7 +308,7 @@
                                     </div>
                             </div>
                             <div class="card-body">
-                                <b>BIO : <br> </b>
+                                <b th:text="#{biography}">BIO : <br> </b>
                                 <p class="px-4" th:text="*{bio}">
 
                                     Ben Arfa ចូល​រួម​ជាមួយ​ក្លឹប Ronaldo ក្រោយ​ខាន​លេង​បាល់​ជាង​កន្លះ​ឆ្នាំ
@@ -317,10 +318,10 @@
 
                             <div class="">
                             <ul th:switch="*{getUserRole()}" class="list-group list-group-flush border-top">
-                                <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/customize';">Customize</li>
-                                <li th:case="'CLIENT'" class="list-group-item text-center click-list-user-profile" onclick="" data-toggle="modal" data-target="#requestModal" data-whatever="@mdo">Request</li>
-                                <li th:case="'ADMIN'" class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin';">Admin</li>
-                                <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/logout';">Logout</li>
+                                <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/customize';" th:text="#{customize}">Customize</li>
+                                <li th:case="'CLIENT'" class="list-group-item text-center click-list-user-profile" onclick="" data-toggle="modal" data-target="#requestModal" data-whatever="@mdo" th:text="#{request}">Request</li>
+                                <li th:case="'ADMIN'" class="list-group-item text-center click-list-user-profile" onclick="location.href='/admin';" th:text="#{admin}">Admin</li>
+                                <li class="list-group-item text-center click-list-user-profile" onclick="location.href='/logout';" th:text="#{log-out}">Logout</li>
                             </ul>
                             </div>
                         </div>
@@ -360,7 +361,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Content Request</h5>
+                    <h5 class="modal-title" id="exampleModalLabel" th:text="#{content-request}">Content Request</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -368,12 +369,12 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            <label for="content-request-title" class="col-form-label">Title</label>
-                            <input type="text" placeholder="Please input content title here" class="form-control" id="content-request-title">
+                            <label for="content-request-title" class="col-form-label" th:text="#{title}">Title</label>
+                            <input type="text" th:placeholder="#{title}" class="form-control" id="content-request-title">
                         </div>
 
                         <div class="form-group">
-                            <label for="content-request-message" class="col-form-label mb-2" >Your Message</label>
+                            <label for="content-request-message" class="col-form-label mb-2" th:text="#{your-message}" >Your Message</label>
                             <textarea class="form-control" id="content-request-message"></textarea>
                         </div>
                     </form>
